--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,13 @@
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
-
+            <intent-filter>
+                <action android:name="net.syllabus.whatsoup.MENU_SAVED"/>
+            </intent-filter>
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/today_widget2_info" />
+                android:resource="@xml/today_widget2_info"
+                android:updatePeriodMillis="1800000" />
         </receiver>
 
         <activity
