--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,24 @@
         android:theme="@style/Theme.WhatSoup"
         tools:targetApi="31">
         <receiver
+            android:name=".NextPlatWidget"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="net.syllabus.whatsoup.MENU_SAVED" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/next_plat_widget_info"
+                android:updatePeriodMillis="1800000"/>
+        </receiver>
+        <receiver
             android:name=".NotifReceiver"
             android:enabled="true"
-            android:exported="true"></receiver>
+            android:exported="true" />
         <receiver
             android:name=".TodayWidget2"
             android:exported="false">
